# gpu_msm

./: .gitignore  CMakeLists.txt  README.md  TESTING.md  run.sh
benchmarks/: benchmark_fp.cu  benchmark_fp2.cu  benchmark_msm.cu
include/: curve.h  fp.h  fp2.h  fp2_kernels.h  fp_kernels.h
rust-api/: Cargo.toml  README.md  build.rs
rust-api/.cargo/: config.toml
rust-api/include/: rust_wrapper.h
rust-api/src/: c_wrapper.cu  conversions.rs  cuda_stubs.c  example.rs  ffi.rs  lib.rs  types.rs
src/: curve.cu  fp.cu  fp2.cu  fp2_kernels.cu  fp_kernels.cu
tests/: test_curve.cu  test_debug_msm.cu  test_fp.cu  test_fp2.cu  test_msm.cu  test_print_generators.cu  test_projective.cu
