[package]
name = "tower-field-arithmetic"
version = "0.1.0"
edition = "2021"

[lib]
name = "tower_field_arithmetic"
crate-type = ["rlib"]

[dependencies]
ark-ec = { version = "0.5.0", features = ["parallel"] }
ark-ff = { version = "0.5.0", features = ["parallel"] }
ark-serialize = "0.5.0"
cc = "1.2.45"
tfhe-zk-pok = "0.7.3"

[dev-dependencies]

[build-dependencies]
cc = "1.2.45"
# For testing conversions with tfhe-zk-pok
# Note: Add tfhe-zk-pok as a dependency when available
# tfhe-zk-pok = { path = "../tfhe-zk-pok" }

